feat(bet-tracker): Add D3.js charting and Supabase integration
Introduces D3.js for visualizing bet tracker data and adds Supabase client for potential future backend integration. Includes UI enhancements and updates dependencies.

The bet tracker now features a dynamic chart illustrating bankroll evolution over time, providing a visual representation of betting performance. Dependency updates include adding `@supabase/supabase-js` and ensuring D3.js is correctly referenced. The Gemini service includes a placeholder for the API key and a check to prevent usage without it. The AuthService has been refactored to manage user data more robustly, including loading from and saving to localStorage, and utilizes signals for reactive updates.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body { 
       font-family: 'Inter', sans-serif; 
@@ -93,7 +94,8 @@
     "@angular/common": "https://next.esm.sh/@angular/common@^21.0.0?external=rxjs",
     "@angular/common/http": "https://next.esm.sh/@angular/common@^21.0.0/http?external=rxjs",
     "@angular/forms": "https://next.esm.sh/@angular/forms@^21.0.0?external=rxjs",
-    "@google/genai": "https://next.esm.sh/@google/genai@^1.30.0?external=rxjs"
+    "@google/genai": "https://next.esm.sh/@google/genai@^1.30.0?external=rxjs",
+    "@supabase/supabase-js": "https://next.esm.sh/@supabase/supabase-js@^2.84.0?external=rxjs"
   }
 }
 </script>
